them view chi tiet hoi nghi

--- a/views/bs4copy.hbs
+++ b/views/bs4copy.hbs
@@ -15,17 +15,6 @@
 
 
   <style type="text/css">
-    @font-face {
-      font-family: 'calendar';
-      src: url('https://static.tkbcdn.com/site/global/content-v2/fonts/fontello/calendar.eot?93090292');
-      src: url('https://static.tkbcdn.com/site/global/content-v2/fonts/fontello/calendar.eot?93090292#iefix') format('embedded-opentype'),
-        url('https://static.tkbcdn.com/site/global/content-v2/fonts/fontello/calendar.woff?93090292') format('woff'),
-        url('https://static.tkbcdn.com/site/global/content-v2/fonts/fontello/calendar.ttf?93090292') format('truetype'),
-        url('https://static.tkbcdn.com/site/global/content-v2/fonts/fontello/calendar.svg?93090292#calendar') format('svg');
-      font-weight: normal;
-      font-style: normal;
-    }
-
     .the-icons {
       font-size: 14px;
       line-height: 24px;
@@ -124,7 +113,7 @@
           var google_conversion_id = 985278676;
           var google_custom_params = window.google_tag_params;
           var google_remarketing_only = true;
-    /* ]]> */
+
         </script>
 
         <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script>
@@ -135,7 +124,7 @@
               src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/985278676/?value=0&amp;guid=ON&amp;script=0" />
           </div>
         </noscript>
-
+        /////phan dau tien banner
         <section class="banner bg-white margin-bottom-20 border-bottom-grey-dark">
 
 
@@ -169,18 +158,8 @@
               }
             }
           </style>
-          <script>
-            window.addEventListener('load', function () {
-              var elems = document.querySelectorAll(".skeleton");
-              [].forEach.call(elems, function (el) {
-                el.classList.remove("skeleton");
-              });
-            });
-          </script>
 
-          <div class="cover-photo skeleton">
 
-          </div>
 
           <div class="container">
             <div class="row">
@@ -222,10 +201,7 @@
 
                         <div class="clearfix"></div>
                       </div>
-                      <div class="button-gr btn-count col-xs-12 col-sm-12 visible-xs"
-                        style="margin-top: 0px; color: #606778">
-                        <span class="followers-id">--</span> người quan t&#226;m
-                      </div>
+
                       <!-- END Mobile Display Only -->
                       <div class="cnt-left col-xs-12 col-sm-12 padding-left-0 padding-right-0">
                         <div class="event-time col-sm-12 pd-hor-15">
@@ -290,8 +266,6 @@
               </div>
 
             </div>
-
-            <!-- #Mobile Display Only-->
             <div
               class="col-xs-12 fixed desktop-invisible bg-white border-top-grey booking-bl padding-left-0 padding-right-0">
               <div class="col-xs-4 table-cell price-box ver-middle">
@@ -304,22 +278,16 @@
               </div>
             </div>
 
-            <!-- #Mobile Display Only-->
+
             <div class="clearfix"></div>
           </div>
-
-
-
-
-
         </section>
-        ///giới thiệu chi tiết tóm tắt nội dung của hội nghị
+
+
         <section class="mainContainer">
           <div class="container left-bl pl-pr-0">
             <div class="col-sm-12 col-md-8 pl-pr-0 specialBox">
               <section class="intro" id="intro">
-                <!--Use id for adding "active" class since it's unique-->
-                <!-- <div class=""> -->
                 <div class="row">
                   <div class="col-sm-12 col-md-12 pl-pr-0">
                     <h3 class="title">Giới thiệu</h3>
@@ -354,17 +322,11 @@
                       </div>
                     </div>
                     <div class="clearfix"></div>
-                    <p class="read-more arrow--sec">
-                      <a href="javascript:void(0)" class="btn" btntype="readmore"><span
-                          class="arrow ello-down-open grey-bright-color"></span></a>
-                    </p>
                   </div>
                   <div class="clearfix"></div>
                 </div>
-
-                <!-- </div> -->
               </section>
-              //nhà tổ chức
+
               <section class="organizer" id="organizer">
                 <div class="row margin-bottom-0">
                   <div class="col-sm-12 pl-pr-0">
@@ -391,7 +353,7 @@
                           </div>
                         </div>
                       </div>
-                    </div>              
+                    </div>
                   </div>
                 </div>
               </section>
@@ -401,12 +363,6 @@
 
 
               <div class="breakpoint"></div>
-            </div>
-            <div data-opm="righbanner" class="col-sm-12 col-md-8 pl-pr-0 hidden-md hidden-lg">
-              <a data-opm="go" href="/events?categories=2">
-                <img class="related-event-web"
-                  src="https://static.tkbcdn.com/site/global/content-v2/img/related_events.svg" alt="View more">
-              </a>
             </div>
 
             <div class="col-sm-4 pd-left-6 padding-right-0 info-box-wr">
@@ -460,12 +416,7 @@
 
                     </div>
                   </div>
-                  <div data-opm="righbanner" class="right-baner">
-                    <a data-opm="go" href="/events?categories=2">
-                      <img style="width: 100%; cursor: pointer"
-                        src="https://static.tkbcdn.com/site/global/content-v2/img/related_events.svg" alt="View more">
-                    </a>
-                  </div>
+
                 </div>
 
               </div>
@@ -486,14 +437,7 @@
 
 
   <style type="text/css">
-    .signinup .modal-content {
-      max-width: 360px;
-      margin: 0 auto;
-    }
 
-    .signinup .dl-success-body {
-      border-radius: 40px;
-    }
 
     .text-wrap a {
       white-space: normal;
@@ -552,59 +496,7 @@
     <![endif]-->
 
   <script type="text/javascript">
-    var pageViewEventDetail = {
-      hasMoreThanOneShowing: 'False' === 'True',
-      isLiveEvent: 'False' === 'True',
-      startTimeMilisecs: 1610953200000,
-      imgCover: 'https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2021/01/04/FB5CFC.jpg',
-      bookingUrl: '/event/81470/ticket-booking/61028',
-      eventHappeningMessageTemplate: 'Sự kiện đã diễn ra được {MIN}, bạn vẫn muốn Mua vé xem Trực tiếp?',
-      isStopSelling: 'False' === 'True',
-      liveStreamUrl: '/video/digital-marketing-fb-workshop-81470'
-    };
 
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-PM9Q8R9');
-
-    window.sendDataToGoogle = function () {
-      var product_list_gtm = [{ "id": 81470, "name": "Digital Marketing F\u0026B Workshop", "price": "450000,0000", "brand": "Asia PMO", "category": "Conference", "variant": "Early Bird Ticket-267308" }, { "id": 81470, "name": "Digital Marketing F\u0026B Workshop", "price": "550000,0000", "brand": "Asia PMO", "category": "Conference", "variant": "Ticket with E-invoice-267313" }, { "id": 81470, "name": "Digital Marketing F\u0026B Workshop", "price": "500000,0000", "brand": "Asia PMO", "category": "Conference", "variant": "Regular Ticket-267314" }];
-
-      if (typeof (dataLayer) !== "undefined") {
-        dataLayer.push({
-          'event': 'productDetail',
-          'ecommerce': {
-            'detail': {
-              'actionField': { 'list': undefined },
-              'products': product_list_gtm
-            }
-          }
-        });
-      }
-    };
-
-    window.fbAsyncInit = function () {
-      FB.init({
-        appId: '337594303053881',
-        xfbml: true,
-        version: 'v2.7'
-      });
-    };
-
-    window.initFacebookScripts = function () {
-      (function (d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) { return; }
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    };
 
     window.showEventCreatedPopup = function () {
       var hash = window.location.hash;
@@ -618,32 +510,7 @@
       };
     };
 
-    window.setupButtonActions = function () {
 
-      document.getElementById('shareBtn').onclick = function () {
-        FB.ui({
-          display: 'popup',
-          method: 'share',
-          href: 'https://ticketbox.vn/event/digital-marketing-fb-workshop-81470',
-        }, function (response) { });
-      };
-
-      document.getElementById('shareBtn2').onclick = function () {
-        FB.ui({
-          display: 'popup',
-          method: 'share',
-          href: 'https://ticketbox.vn/event/digital-marketing-fb-workshop-81470',
-        }, function (response) { });
-      };
-
-      document.getElementById('shareBtn3').onclick = function () {
-        FB.ui({
-          display: 'popup',
-          method: 'share',
-          href: 'https://ticketbox.vn/event/digital-marketing-fb-workshop-81470',
-        }, function (response) { });
-      };
-    };
 
     window.trackPageViewEvents = function () {
       tkb.data.eventId = 81470;
@@ -664,90 +531,6 @@
       return cookie[name];
     }
 
-    var object_type = "event";
-    var object_id = 81470;
-    var graphQLUrl = 'https://api-movie.ticketbox.vn/v1/graphql/query';
-
-    function updateNumFollowers() {
-      var query = `query get_follow_summary($object_id: Int!, $object_type: String!) {
-                            get_follow_summary(object_id: $object_id, object_type: $object_type){
-                                follower_count
-                            }
-                        }`;
-      var body = JSON.stringify({
-        query,
-        variables: { object_id, object_type },
-      })
-
-      var callback = (data) => {
-        var content = (data != null && data.data != null && data.data.get_follow_summary != null && data.data.get_follow_summary.follower_count > 0) ? data.data.get_follow_summary.follower_count : "--";
-        $(".followers-id").html(content);
-      }
-      makeGraphqlRequest(body, callback);
-    }
-
-    function userFollowEvent() {
-      var query = `mutation follow($object_id: Int!, $object_type: String!) {
-                            follow(object_id: $object_id, object_type: $object_type){
-                                id
-                            }
-                        }`;
-      var body = JSON.stringify({
-        query,
-        variables: { object_id, object_type },
-      })
-
-      var callback = (data) => {
-        if (data != null && data != null && data.errors != null && data.errors[0].message == "Phiên làm việc hết hạn, vui lòng đăng nhập lại") {
-          setTimeout(function () { window.location = '/sign-in?ref=' + encodeURI(window.location.href); }, 300);
-          return;
-        }
-        setTimeout(() => {
-          updateUIFollowEvent();
-        }, 1000)
-      }
-
-      makeGraphqlRequest(body, callback);
-    }
-
-    function userUnFollowEvent() {
-      var query = `mutation unfollow($object_id: Int!, $object_type: String!) {
-                            unfollow(object_id: $object_id, object_type: $object_type){
-                                id
-                            }
-                        }`;
-      var body = JSON.stringify({
-        query,
-        variables: { object_id, object_type },
-      })
-
-      var callback = (data) => {
-        if (data != null && data != null && data.errors != null && data.errors[0].message == "Phiên làm việc hết hạn, vui lòng đăng nhập lại") {
-          setTimeout(function () { window.location = '/sign-in?ref=' + encodeURI(window.location.href); }, 300);
-          return;
-        }
-        setTimeout(() => {
-          updateUIFollowEvent();
-        }, 1000)
-      }
-      makeGraphqlRequest(body, callback);
-    }
-
-    function makeGraphqlRequest(body, callback) {
-      fetch(graphQLUrl, {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'Accept': 'application/json',
-          "x-tb-access-token": getCookie("TBoxJWT")
-        },
-        body: body
-      })
-        .then(r => r.json())
-        .then((data) => {
-          callback(data);
-        });
-    }
 
     function showHideFollowBtn() {
       var query = `query get_relationship($object_id: Int!, $object_type: String!) {
@@ -871,18 +654,7 @@
         return check;
       })();
 
-      //if (isFromMobileApp == false && isMobile == true) {
-      //    $.ajax({
-      //        url: '/layout/AlertBar',
-      //        type: 'get',
-      //        success: function (data) {
-      //            $('#alert-bar').html(data);
-      //        },
-      //        fail: function (jqXHR, textStatus, errorThrown) {
-      //            showDialogAlert(_alerter, errorThrown, null);
-      //        }
-      //    });
-      //}
+
 
       if (isMobile && document.referrer == "" && isFromMobileApp == false) {
         $.ajax({
