--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  
+
   {{> carousel}}
 
   <div class="main">
@@ -32,8 +32,8 @@
                   lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                    <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -52,8 +52,8 @@
                   lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                    <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -72,8 +72,8 @@
                   lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                    <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -93,8 +93,8 @@
                   lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                    <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -113,8 +113,8 @@
                   lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                    <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -133,8 +133,8 @@
                   lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                    <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -154,8 +154,8 @@
                   lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                    <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -174,8 +174,8 @@
                   lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                    <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -194,8 +194,8 @@
                   lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                    <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
@@ -244,8 +244,8 @@
                 <p class="card-text">${e.name}.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+                      <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a> 
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
