--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,7 +1,3 @@
-
-
-
-
 <nav class="navbar navbar-expand-lg shadow-lg navbar-dark fixed-top" style="background-color: #189EFF;">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
@@ -25,12 +21,25 @@
 
     <form id="frmLogout" method="POST" action="/user/logout"></form>
     <ul class="col-sm-4 d-flex justify-content-end navbar-nav mb-2 mb-lg-0">
-      {{#if isAuth}}
+      {{#if this.empty }}
+      <li class="nav-item active">
+        <a class="btn btn-outline-light me-2" role="button" aria-expanded="false" href="/login">
+          Đăng nhập
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="btn btn-light" href="/signup">
+          Đăng kí
+        </a>
+      </li>
+      {{else}}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button"
           data-bs-toggle="dropdown" aria-expanded="false">
           <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-          <b>{{authUser.name}}</b>
+          {{#each this.user}}            
+          <b>{{name}}</b>
+          {{/each}}
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
           <li>
@@ -68,17 +77,7 @@
           Thông báo
         </a>
       </li>
-      {{else}}
-      <li class="nav-item active">
-        <a class="btn btn-outline-light me-2" role="button" aria-expanded="false" href="/login">
-          Đăng nhập
-        </a>
-      </li>
-      <li class="nav-item active">
-        <a class="btn btn-light" href="/signup">
-          Đăng kí
-        </a>
-      </li>
+
       {{/if}}
     </ul>
 
