--- a/views/viewAdmin/allInfoU.hbs
+++ b/views/viewAdmin/allInfoU.hbs
@@ -23,44 +23,73 @@
 
         {{!--Kết quả trả về nếu có (bình thường sẽ ẩn nó, nếu có kết quả thì hiện lên)--}}
 
+        {{!-- --}}
+        <div class="row">
+            <div class="col-md-2 mr-auto card text-dark light mb-3" style="max-width: 18rem;">
+                
+                <div class="card-header">48 user</div>
+                <div class="card-body">
+                    <h5 class="card-title">Light card title</h5>
+                    <p class="card-text">Tổng số lượng user</p>
+                </div>
+            </div>
+
+            <div class="col mr-auto card text-white bg-success mb-3" style="max-width: 18rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                    <h5 class="card-title">Success card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+
+            <div class="col mr-auto card text-white bg-danger mb-3" style="max-width: 18rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                    <h5 class="card-title">Danger card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+        </div>
         {{!-- Danh sách toàn bộ User xuất hiện ngay từ đầu --}}
         <table class="table table-striped">
             <h5 style="margin-top: 20px"> Danh sách thông tin User:</h4>
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Họ và tên</th>
-                    <th scope="col">Địa chỉ email</th>
-                    <th scope="col">Số điện thoại</th>
-                    <th scope="col">Chi tiết tham gia hội nghị</th>
-                    <th scope="col">Tình trạng tài khoản</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td><a href="#">xem chi tiết</a></td>
-                    <td>Hoạt động</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td><a href="#">xem chi tiết</a></td>
-                    <td>Hoạt động</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                    <td><a href="#">xem chi tiết</a></td>
-                    <td>Hoạt động</td>
-                </tr>
-            </tbody>
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Họ và tên</th>
+                        <th scope="col">Địa chỉ email</th>
+                        <th scope="col">Số điện thoại</th>
+                        <th scope="col">Chi tiết tham gia hội nghị</th>
+                        <th scope="col">Tình trạng tài khoản</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                        <td><a href="#">xem chi tiết</a></td>
+                        <td>Hoạt động</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                        <td><a href="#">xem chi tiết</a></td>
+                        <td>Hoạt động</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td colspan="2">Larry the Bird</td>
+                        <td>@twitter</td>
+                        <td><a href="#">xem chi tiết</a></td>
+                        <td>Hoạt động</td>
+                    </tr>
+                </tbody>
         </table>
     </div>
 </div>
