--- a/views/vwConference/infoconference.hbs
+++ b/views/vwConference/infoconference.hbs
@@ -1,9 +1,9 @@
-<div class="container-fluid">
+<div class="container">
   <div class="mw-100 cover-photo mb-5"
     style="height: 550px; background-image: url(&quot;https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2021/01/11/876FBE.jpg&quot;);">
   </div>
 
-  <div class="row mb-2">
+  <div class="row mb-5">
     <div class="col-md-12">
       <div class="row g-0 border overflow-hidden flex-md-row mb-4 h-md-250 position-relative shadow-lg mx-auto"
         style="border-radius: 40px;">
@@ -59,7 +59,7 @@
   </div>
 
 
-  <div class="row ">
+  <div class="row mb-5">
     <div class="col-sm-12 col-md-12 pl-pr-0">
       <div class="row g-0 border overflow-hidden flex-md-row mb-4 h-md-250 position-relative shadow-lg mx-auto"
         style="border-radius: 40px;">
@@ -244,7 +244,7 @@
     <div class="clearfix"></div>
   </div>
 
-  <div class="row mb-2">
+  <div class="row mb-5">
     <div class="col-md-12">
       <div class="row g-0 border overflow-hidden flex-md-row mb-4 h-md-250 position-relative shadow-lg mx-auto"
         style="border-radius: 40px;">
