them view acceptuser thanh navadmin va chinh sua mot it o mot so file khac

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -251,10 +251,10 @@
                 data-holder-rendered="true">
               <div class="card-body">
                 <p class="card-text">${e.name}.</p>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center">      
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary" onclick="viewInfoConference(${i})">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary my-2" onclick="viewInfoConference(${i})">Xem chi tiết</button>
+                    <button type="button" class="btn btn-sm btn-outline-success my-2">Đăng kí tham gia</button>
                   </div>
                   <small class="text-muted">9 mins</small>
                 </div>
