--- a/views/vwAdmin/alluser.hbs
+++ b/views/vwAdmin/alluser.hbs
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-3">
-        {{> navmenu}}
+        {{> navmenuadmin}}
     </div>
 
     <div class="col">
