--- a/views/vwConference/infoconference.hbs
+++ b/views/vwConference/infoconference.hbs
@@ -26,6 +26,8 @@
             </div>
           </div>
         </div>
+
+        {{!-- phần của user  --}}
         <div class="col-auto p-4 d-flex flex-column position-static">
           <button type="button" class="btn btn-success rounded-pill w-100 mb-3"
             style="height: 55px; background-color: #5AAC44; font-size: larger;">
@@ -33,9 +35,11 @@
               <i class="fa fa-file-text-o" aria-hidden="true"></i>
               Đăng ký tham gia
             </strong>
-          </button>      
+          </button>
         </div>
 
+
+        {{!-- phần của admin --}}
         {{!-- <div class="col-auto p-4 d-flex flex-column position-static">
           <button type="button" class="btn btn-success rounded-pill w-100 mb-3"
             style="height: 55px; background-color: #5AAC44; font-size: larger;">
@@ -63,7 +67,7 @@
     <div class="col-sm-12 col-md-12 pl-pr-0">
       <div class="row g-0 border overflow-hidden flex-md-row mb-4 h-md-250 position-relative shadow-lg mx-auto"
         style="border-radius: 40px;">
-        <h3 class="title p-4">Giới thiệu chi tiết</h3>
+        <h3 class="title p-4" style="border-bottom: 1px solid gray;">Giới thiệu chi tiết</h3>
         <div class="col p-4 d-flex flex-column position-static">
           <div class="col-auto box">
             <div class="really-height">
@@ -249,7 +253,7 @@
       <div class="row g-0 border overflow-hidden flex-md-row mb-4 h-md-250 position-relative shadow-lg mx-auto"
         style="border-radius: 40px;">
         <div class="row margin-bottom-0">
-          <h3 class="title p-4">Nhà tổ chức</h3>
+          <h3 class="title p-4" style="border-bottom: 1px solid gray;">Nhà tổ chức</h3>
           <div class="col p-4">
             <div class="row really-height">
               <div class=" col-3 ">
