them view manageconference, userbanned va sua mot so cho khac

--- a/views/partials/menuadmin.hbs
+++ b/views/partials/menuadmin.hbs
@@ -8,13 +8,13 @@
 </style>
 <ul class="nav flex-column" style="background: #dbdbdb; height: 100%">
   <li class="nav-item" style="border-bottom: 1px solid gray;">
-    <a href="/admin/creatconference" class="nav-link active" aria-current="page">
+    <a href="/admin/manageconference" class="nav-link active" aria-current="page">
       <img src="/public/images/iconqlhn.png" style="margin-right: 10px">
       Quản lý hội nghị
     </a>
   </li>
   <li class="nav-item" style="border-bottom: 1px solid gray">
-    <a href="/admin/alluser" class="nav-link active">
+    <a href="/admin/manageuser" class="nav-link active">
       <img src="/public/images/iconqlu.png" style="margin-right: 10px">
       Quản lý User
     </a>
