--- a/views/vwAdmin/acceptuser.hbs
+++ b/views/vwAdmin/acceptuser.hbs
@@ -1,14 +1,14 @@
-<div class="container-fluid">
+<div class="bg-light" >
   <div class="row">
     <div class="col-3">
-      {{> navmenuadmin}}
+      {{> menuadmin}}
     </div>
 
     <div class="col-9">
       {{!-- Form Tìm kiếm --}}
       <form class="row mt-3" style="border-bottom: 1px solid gray;">
         <div class="col-auto">
-          <input type="text" class="form-control" id="name" placeholder="Tìm theo tên user">
+          <input type="text" class="form-control" id="name" placeholder="Tìm User theo tên">
         </div>
         <div class="col-auto">
           <input type="email" class="form-control" id="email" placeholder="Tìm theo email" pattern="[0-9]{10}">
@@ -28,10 +28,10 @@
         </strong>
         <thead class="table-dark">
           <tr>
-            <th scope="col"></th>
-            <th class="name  " scope="col">Họ và tên</th>
-            <th class="email  " scope="col">Địa chỉ email</th>
-            <th class="nameconference " scope="col">Hội nghị đăng kí tham gia</th>
+            <th scope="col">STT</th>
+            <th class="name" scope="col">Họ và tên</th>
+            <th class="email" scope="col">Địa chỉ email</th>
+            <th class="nameconference" scope="col">Hội nghị đăng kí tham gia</th>
             <th class="" scope="col">Thông tin User</th>
             <th class="" scope="col">Phê duyệt yêu cầu</th>
           </tr>
