--- a/views/vwAdmin/alluser.hbs
+++ b/views/vwAdmin/alluser.hbs
@@ -1,11 +1,11 @@
-<div class="row">
+<div class="row bg-light">
     <div class="col-md-3">
-        {{> navmenuadmin}}
+        {{> menuadmin}}
     </div>
 
     <div class="col">
         {{!-- Form Tìm kiếm thông tin user bằng Username hoặc số điện thoại --}}
-        <form class="row" style="border-bottom: 1px solid gray;">
+        <form class="row mt-3" style="border-bottom: 1px solid gray;">
             <div class="col-auto">
                 <p>Tìm kiếm User nhập:</p>
             </div>
