--- a/views/vwAdmin/creatconference.hbs
+++ b/views/vwAdmin/creatconference.hbs
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row bg-light">
   <div class="col-md-3">
-    {{> navmenuadmin}}
+    {{> menuadmin}}
   </div>
 
   <div class="col mt-3">
