them view editconference

--- a/views/partials/filter_sort.hbs
+++ b/views/partials/filter_sort.hbs
@@ -31,7 +31,7 @@
     </div>
 
     <div class="col-auto">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-outline-primary">Lọc</button>
     </div>
   </form>
 
