--- a/views/vwAdmin/alluser.hbs
+++ b/views/vwAdmin/alluser.hbs
@@ -1,9 +1,9 @@
 <div class="row bg-light">
-    <div class="col-md-3">
+    <div class="col-3">
         {{> menuadmin}}
     </div>
 
-    <div class="col">
+    <div class="col-9">
         {{!-- Form Tìm kiếm thông tin user bằng Username hoặc số điện thoại --}}
         <form class="row mt-3" style="border-bottom: 1px solid gray;">
             <div class="col-auto">
