them view danh sach hoi nghi user da dang ki va chinh sua mot so file

--- a/views/partials/carousel.hbs
+++ b/views/partials/carousel.hbs
@@ -66,4 +66,4 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </a>
-</div>>
+</div>
