--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -41,11 +41,9 @@
 
 
 
-<footer class="footer container-fluid navbar-fixed-bottom navbar row align-items-end">
-  <div class="footer-area d-flex">
-
-
-    <div class="col-md-4 col-sm-4">
+<footer class="footer navbar-fixed-bottom navbar row align-items-end">
+  <div class="row footer-area d-flex">
+    <div class="col-md-4 ">
       <div class="single-footer-widget tp_widgets">
         <h4 class="footer_title large_title">Hotline hỗ trợ</h4>
         <p>Hồ Chí Minh: Thứ 2 -Thứ 6 (8:00-17:00)</p>
@@ -56,7 +54,7 @@
         <p>supportConferenceK16@gmail.com</p>
       </div>
     </div>
-    <div class="col-md-4 col-sm-4">
+    <div class="col-md-4 ">
       <div class="single-footer-widget tp_widgets">
         <h4 class="footer_title">Hướng dẫn đăng ký hội nghị</h4>
         <p>Chỉ vài thao tác đơn giản</p>
@@ -67,7 +65,7 @@
       </div>
     </div>
 
-    <div class="col-md-4 col-sm-4">
+    <div class="col-md-4">
       <div class="single-footer-widget tp_widgets">
         <h4 class="footer_title">FAQ</h4>
         <p>Câu hỏi thường gặp</p>
@@ -79,7 +77,7 @@
 
   </div>
 
-  <div class="footer-bottom">
+  <div class="row footer-bottom">
     <p class="col-lg-12 footer-text text-center">
       Copyright &copy;
       <script>document.write(new Date().getFullYear());</script> All rights reserved | This website is
