--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -89,7 +89,7 @@
             </a>
           </li>
           <li>
-            <a class="dropdown-item" href="/user/info">
+            <a class="dropdown-item" href="/user/registeredconference">
               <i class="fa fa-book" aria-hidden="true"></i>
               Xem danh sách hội nghị đã đăng kí
             </a>
