--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,23 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
+{{#section 'css'}}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online Shopping WebApp</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+{{/section}}
 
-<body>
+{{#section 'js'}}
+
+<script src="../public/javascripts/ajax/conferenceAjax.js"></script>
+
+<script>
+  console.log('get here')
+
+  const viewInfoConference = id => {
+    $(_ => {
+      let idO = localStorage.getItem(`con${id}`);
+      localStorage.setItem('conferenceCurrent', idO);
+    })
+  }
+
+  $.ajax({
+    url: 'http://localhost:3000/conference',
+    method: 'GET',
+    dataType: 'json',
+    beforeSend: request => {
+      request.setRequestHeader('x-access-token', localStorage.getItem('x-access-token'));
+    }
+  }).done(data => {
+    let html = document.getElementById("mainBody");
+    let str = '';
+    console.log('data: ', data.data);
+
+    data.data.forEach((e, i) => {
+      localStorage.setItem(`con${i}`, e.id);
+
+      str += `
+        <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+              <img class="card-img-top"
+                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                src="${e.image_link}"
+                data-holder-rendered="true">
+              <div class="card-body">
+                <p class="card-text">${e.name}.</p>
+                <div class="">      
+                  <div class="btn-group d-flex justify-content-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary my-2" onclick="viewInfoConference(${i})">Xem thông tin chi tiết</button>
+                    <button type="button" class="btn btn-sm btn-outline-success my-2">Đăng kí tham gia</button>
+                  </div>
+                  <small class="text-muted">9 mins</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        `;
+    })
+    html.innerHTML = str;
+    //
+
+  });
+</script>
+{{/section}}
+
+<div class=" bg-light container-fluid">
 
   {{> carousel}}
+  <div class="mt-5">
+    {{> filter_sort}}
+  </div>
 
   <div class="main">
 
 
-    <div class="album py-5 bg-light">
-      <div class="container">
+    <div class="container album mt-5">
+      <div class="">
 
         <div class="row" id="mainBody">
           <div class="col-md-4">
@@ -81,73 +135,12 @@
             </div>
           </div>
 
-     
+
         </div>
       </div>
     </div>
 
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
-  <script src="../public/javascripts/ajax/conferenceAjax.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
-  <script>
-    console.log('get here')
-
-    const viewInfoConference = id => {
-      $(_ => {
-        let idO = localStorage.getItem(`con${id}`);
-        localStorage.setItem('conferenceCurrent', idO);
-      })
-    }
-
-    $.ajax({
-      url: 'http://localhost:3000/conference',
-      method: 'GET',
-      dataType: 'json',
-      beforeSend: request => {
-        request.setRequestHeader('x-access-token', localStorage.getItem('x-access-token'));
-      }
-    }).done(data => {
-      let html = document.getElementById("mainBody");
-      let str = '';
-      console.log('data: ', data.data);
-
-      data.data.forEach((e, i) => {
-        localStorage.setItem(`con${i}`, e.id);
-
-        str += `
-        <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top"
-                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-                src="${e.image_link}"
-                data-holder-rendered="true">
-              <div class="card-body">
-                <p class="card-text">${e.name}.</p>
-                <div class="d-flex justify-content-between align-items-center">      
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-primary my-2" onclick="viewInfoConference(${i})">Xem chi tiết</button>
-                    <button type="button" class="btn btn-sm btn-outline-success my-2">Đăng kí tham gia</button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
-                </div>
-              </div>
-            </div>
-          </div>
-        `;
-      })
-      html.innerHTML = str;
-      //
-
-    });
-  </script>
-</body>
-
-</html>
+</div>
