--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,19 +13,16 @@
   {{{_sections.css}}}
 </head>
 
-<body>
+<body class="">
 
   {{> nav}}
 
-
-
-  <div style=" margin-top: 81px;">
+  <div class="" style=" margin-top: 81px;">
     {{{body}}}
   </div>
-
-
-
-  {{> footer}}
+  <div class="">
+    {{> footer}}
+  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
