--- a/views/vwAdmin/manageUser/userconference.hbs
+++ b/views/vwAdmin/manageUser/userconference.hbs
@@ -1,48 +1,43 @@
-<div class="bg-light">
-  <div class="row">
-    <div class="col-3">
-      {{> menuadmin}}
+<div class="row bg-light">
+  <div class="col-3">
+    {{> menuadmin}}
+  </div>
+
+  <div class="col-9">
+    {{!-- Thông tin user --}}
+
+    <div class="justify-content-center">
+      <div class="card " style="width: 20rem;">
+
+        <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_1280.png" class="card-img-top" alt="...">
+        <div class="card-body ">
+          <h5>Nguyễn Văn An</h5>
+          <p>Ngày sinh: 20/12/1993</p>
+          <p>abcnguyen@gmail.com</p>
+          <p>01987304657</p>
+        </div>
+      </div>
     </div>
-
-    <div class="col-9">
-      {{!-- Form Tìm kiếm --}}
-      <form class="row mt-3" style="border-bottom: 1px solid gray;">
-        <div class="col-auto">
-          <input type="text" class="form-control" id="name" placeholder="Tìm User theo tên">
-        </div>
-        <div class="col-auto">
-          <input type="email" class="form-control" id="email" placeholder="Tìm theo email" pattern="[0-9]{10}">
-        </div>
-        <div class="col-auto">
-          <input type="text" class="form-control" id="nameconference" placeholder="Tìm theo hội nghị">
-        </div>
-        <div class="col-auto">
-          <button type="button" class="btn btn-outline-primary mb-3">Tìm kiếm</button>
-        </div>
-      </form>
-
-      {{!-- Danh sách User đăng kí tham gia hội nghị--}}
+    <div>
+      {{!-- Danh sách hội nghị đang chờ phê duyệt --}}
       <table class="table table-striped">
         <strong class="d-inline-block p-3">
-          <h3> Danh sách User đăng kí tham gia hội nghị:</h3>
+          <h5> Danh sách hội nghị user đã đăng kí đang chờ phê duyệt:</h3>
         </strong>
-        <thead class="table-dark">
+        <thead class="text-light bg-info">
           <tr>
             <th scope="col">STT</th>
-            <th class="name" scope="col">Họ và tên</th>
-            <th class="email" scope="col">Địa chỉ email</th>
-            <th class="nameconference" scope="col">Hội nghị đăng kí tham gia</th>
-            <th class="" scope="col">Thông tin User</th>
+
+            <th class="nameconference" scope="col">Tên hội nghị</th>
+
             <th class="" scope="col">Phê duyệt yêu cầu</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <th scope="row">1</th>
-            <td>Dương Văn Khang</td>
-            <td>khang@gmail.com</td>
+
             <td>Khóa học Ứng dụng SQL trong xử lý dữ liệu</td>
-            <td><a href="/admin/infouser/{{id}}">Xem chi tiết</a></td>
             <td>
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-success my-2">Phê duyệt</button>
@@ -52,10 +47,8 @@
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td>Hoàng Ngọc Kim Thanh</td>
-            <td>thanh@gmail.com</td>
+
             <td>Khóa học Tổ chức và quản lý dữ liệu báo cáo trong Excel</td>
-            <td><a href="/admin/infouser">Xem chi tiết</a></td>
             <td>
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-success my-2">Phê duyệt</button>
@@ -65,10 +58,7 @@
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td>Trần Minh Thiện</td>
-            <td>thien@gmail.com</td>
             <td>Khóa học Advanced Power Query</td>
-            <td><a href="/admin/infouser">Xem chi tiết</a></td>
             <td>
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-success my-2">Phê duyệt</button>
@@ -78,10 +68,7 @@
           </tr>
           <tr>
             <th scope="row">4</th>
-            <td>Nguyễn Thị Mỹ Tiên</td>
-            <td>tien@gmail.com</td>
             <td>Khóa học Ứng dụng SQL trong xử lý dữ liệu</td>
-            <td><a href="/admin/infouser">Xem chi tiết</a></td>
             <td>
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-success my-2">Phê duyệt</button>
@@ -93,7 +80,39 @@
 
         </tbody>
       </table>
-    </div>
-  </div>
+      {{!-- Danh sách hội nghị user đã tham gia --}}
+      <table class="table table-striped">
+        <h5 style="margin-top: 20px"> Danh sách hội nghị User đã tham gia:</h4>
+          <thead class="text-light bg-secondary ">
+            <tr>
+              <th scope="row">STT</th>
+              <th scope="col">Tên hội nghị</th>
+              <th scope="col">Tóm tắt nội dung hội nghị</th>
 
-</div>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry the Bird</td>
+              <td>@twitter</td>
+
+            </tr>
+          </tbody>
+      </table>
+
+    </div>
+
+  </div>
